--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v2.7.0
         with:
-          context: ./src
-          file: ./src/Dockerfile
+          context: ./ConversaoPeso.Web
+          file: ./ConversaoPeso.Web/Dockerfile
           push: true
           tags: |
             flsanchesjr/conversao-peso:v1
